# whatsupgithub

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
analysis/: contributes.ipynb
src/whatsupgithub/: __init__.py  __main__.py
